service/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: api
  namespace: sostrades
spec:
  ports:
    - name: api
      protocol: TCP
      port: 8000
      targetPort: 8000
    - name: api-data
      protocol: TCP
      port: 8001
      targetPort: 8001
    - name: api-message
      protocol: TCP
      port: 8002
      targetPort: 8002
    - name: https
      protocol: TCP
      port: 8003
      targetPort: 8003
    - name: api-v0
      protocol: TCP
      port: 8004
      targetPort: 8004
  internalTrafficPolicy: Cluster
  type: ClusterIP
  selector:
    app: api
    deploymentconfig: api
  
---
kind: Service
apiVersion: v1
metadata:
  name: mysql
  namespace: sostrades
spec:
  ports:
    - name: http
      protocol: TCP
      port: 3306
      targetPort: 3306
  internalTrafficPolicy: Cluster
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: mysql-sostrades
    app.kubernetes.io/name: mysql-sostrades  
---
kind: Service
apiVersion: v1
metadata:
  name: ontology
  namespace: sostrades
spec:
  ports:
    - name: api
      protocol: TCP
      port: 5555
      targetPort: 5555
  internalTrafficPolicy: Cluster
  type: ClusterIP
  selector:
    app: ontology
    deploymentconfig: ontology
  
---

kind: Service
apiVersion: v1
metadata:
  name: frontend
  namespace: sostrades
  labels:
    app: frontend
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: frontend
    deploymentconfig: frontend
