service/route.yaml
kind: Route
apiVersion: v1
metadata:
  name: frontend
  namespace: sostrades
  labels:
    app: frontend
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: frontend
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: sostrades
  annotations:
    kubernetes.io/tls-acme: 'true'

spec:
  host: 127.0.0.1:8089
  to:
    kind: Service
    name: frontend
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    certificate: |
      -----BEGIN CERTIFICATE-----
      MIIGbTCCBVWgAwIBAgISBJpUd/VLb7p/ptJsRW9W8Fr9MA0GCSqGSIb3DQEBCwUA
[...]
      kdC5+O7qPLA4U5BgkD8+wM4=
      -----END CERTIFICATE-----
      -----BEGIN CERTIFICATE-----
      MIIFFjCCAv6gAwIBAgIRAJErCErPDBinU/bWLiWnX1owDQYJKoZIhvcNAQELBQAw
[...]
      nLRbwHOoq7hHwg==
      -----END CERTIFICATE-----
      -----BEGIN CERTIFICATE-----
      MIIFYDCCBEigAwIBAgIQQAF3ITfU6UK47naqPGQKtzANBgkqhkiG9w0BAQsFADA/
[...]
      Dfvp7OOGAN6dEOM4+qR9sdjoSYKEBpsr6GtPAQw4dy753ec5
      -----END CERTIFICATE-----
    key: |
      -----BEGIN RSA PRIVATE KEY-----
      MIIJJwIBAAKCAgEA6X6U2uHZznUzpt9Ly5Zxutsinp36vRbpQRb0s3GxBKiK1ucI
[...]
      -----END RSA PRIVATE KEY-----
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
